# py2winapp

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  build.py  example_build_fastapi_desktop.py  example_build_flask-desktop.py  example_build_flask_desktop.py  index.html  mkdocs.yml  objects.inv  py2winapp.py  pyproject.toml
api/: index.html
docs/: api.md  index.md
examples/django-desktop/flaskwebgui_keep_gui_open/: apps.py  middleware.py
examples/fastapi-desktop/: example_build_fastapi_desktop.py  main.py  requirements.txt
examples/fastapi-desktop/src/: main.py
examples/flask-desktop/: example_build_flask_desktop.py  requirements.txt
examples/flask-desktop/src/: gui.py  main.py
examples/flask-desktop/src/static/: metro-all.min.css  metro.min.js  scripts.js  stop_server.js
examples/flask-desktop/src/templates/: index.html  some_page.html
examples/flask-desktop/templates/: index.html
py2winapp/: __init__.py  downloader.py  generate_exe.py  py2winapp.py
source/: main.py
