[tool.poetry]
name = "py2winapp"
version = "0.1.0"
description = "Make runnable apps from your python scripts!"
authors = ["Ruslan Iskov <ruslan.rv.ua@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry_bumpversion.file."py2winapp/__init__.py"]

[tool.poetry.dependencies]
python = "^3.10"
gen-exe = "^0.2.1"
requests = "^2.31.0"
python-slugify = "^8.0.1"
pip-requirements-parser = "^32.0.1"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
flake8-pydocstyle = "^0.2.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
        \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

# mypy configs
[tool.mypy]
python_version = "3.9"
mypy_path = "py2winapp"
exclude = [
    "build",
    "dist",
    "docs",
    "examples",
    "scripts",
    "tests",
    ".venv",
    "py2winapp/__init__.py",
]

# isort configs
[tool.isort]
line_length = 88

# flake8 configs
[tool.flake8]
# ignore = ['E231', 'E241']
# per-file-ignores = [
#     '__init__.py:F401',
# ]
max-line-length = 88
count = true
# [DAR]
# ignore = DAR201
